k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-create-service
  labels:
    app: client-create-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-create-service
  template:
    metadata:
      labels:
        app: client-create-service
    spec:
      containers:
        - name: client-create-service
          image: deamal/client-create-service:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: client-create-service
spec:
  selector:
    app: client-create-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
