k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-create-service
spec:
  selector:
    app: client-create-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
