k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-create-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target:
spec:
  ingressClassName: nginx
  rules:
    - host:
      http:
        paths:
          - pathType: Prefix
            path: /client/create
            backend:
              service:
                name: client-create-service
                port:
                  number: 80
